--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,7 @@ h3,
 h4,
 h5,
 h6,
+p,
 span {
     font-family: "Source Sans Pro";
 }
@@ -59,7 +60,7 @@ span {
 .menu-item>a,
 .sidenav-list__item>a,
 .card-subtitle {
-    color: #085E3C;
+    color: #545658;
 }
 
 .menu-item>a,
@@ -85,7 +86,7 @@ span {
 }
 
 .menu-item {
-    margin: 0 60px 0 0;
+    margin: 0 40px 0 0;
     list-style: none;
     font-size: 16px;
 }
