--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,12 +20,29 @@ span {
     display: flex;
 }
 
-.card a,
-.card a:visited,
-.category .heading a:visited,
-.category .heading .more a,
-.site a {
+.menu-item {
+    margin: 0 40px 0 0;
+    list-style: none;
+    font-size: 16px;
+}
+
+.menu-item>a {
     text-decoration: none;
+}
+
+.sidenav-list {
+    margin: 0;
+    padding: 0;
+}
+
+.sidenav {
+    width: 154px;
+    height: 100%;
+    position: fixed;
+}
+
+.container {
+    margin-top: 127px
 }
 
 .limiter {
@@ -44,15 +61,68 @@ span {
     height: 70px;
 }
 
-.logo {
+.titulo {
+    font-size: 38px;
+    font-family: "Open Sans";
+    color: #254171;
+}
+
+.subtitulo {
+    margin: 34px 0 0 0;
+    width: 600px;
+}
+
+.btn {
+    height: 39px;
+    border-radius: 19.5px;
+    width: 184px;
+    text-align: center;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+}
+
+.btn-primary {
+    color: white;
+    background-color: #085E3C;
+}
+
+label {
+    font-size: 14px;
+}
+
+.form-group {
     display: flex;
+    align-items: flex-start;
     flex-direction: column;
 }
 
-.logo-name {
-    margin: 0;
-    font-size: 26px;
-    color: #254171;
+.input-group {
+    width: 100%;
+    height: 33px;
+    border-radius: 3px;
+    margin: 10px 0 10px 0;
+    font-size: 16px;
+    padding: 0 0 0 10px;
+    font-family: "Open Sans";
+}
+
+::placeholder {
+    font-size: 14px;
+    color: #545658;
+    padding: 3px;
+    box-sizing: border-box;
+}
+
+.swiper-container {
+    width: 100%;
+    margin: 80px 0 0 0;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.swiper-slide {
+    background-position: center;
 }
 
 .logo-profession,
@@ -79,80 +149,4 @@ span {
     color: #254171;
     font-weight: bold;
     text-decoration: underline;
-}
-
-.menu {
-    display: flex;
-}
-
-.menu-item {
-    margin: 0 40px 0 0;
-    list-style: none;
-    font-size: 16px;
-}
-
-.menu-item>a {
-    text-decoration: none;
-}
-
-.container {
-    margin-top: 127px
-}
-
-.sidenav-list {
-    margin: 0;
-    padding: 0;
-}
-
-.sidenav {
-    width: 154px;
-    height: 100%;
-    position: fixed;
-}
-
-.main {
-    width: 767px;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 0 0 0 15px;
-    margin-left: 185px;
-}
-
-.flex {
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.sidenav-list__item {
-    list-style: none;
-    padding: 12px 0 0 0;
-}
-
-.sidenav-list__item>a {
-    text-decoration: none;
-    list-style: none;
-    font-size: 18px;
-}
-
-.project {
-    padding: 0 0 20px 0;
-}
-
-.card {
-    border: 1px solid #F9F9FA;
-    width: 360px;
-}
-
-.card-img {
-    width: 360px;
-}
-
-.card-title {
-    color: #545658;
-    font-size: 17px;
-}
-
-.card-subtitle {
-    font-size: 12px;
-    color: #929292;
 }
