--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,20 +1,3 @@
-.limiter {
-    max-width: 1000px;
-    margin: 0 auto;
-    background-color: #fff;
-}
-
-.logo {
-    display: flex;
-    flex-direction: column;
-}
-
-.logo-name {
-    margin: 0;
-    font-size: 26px;
-    color: #254171;
-}
-
 .main {
     width: 767px;
     flex-wrap: wrap;
@@ -57,11 +40,11 @@
 }
 
 .card-title {
-    color: #545658;
+    color: #223A56;
     font-size: 17px;
 }
 
 .card-subtitle {
     font-size: 12px;
-    color: #929292;
+    color: #788DA0;
 }
