--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,16 +1,3 @@
-.main {
-    width: 767px;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 0 0 0 15px;
-    margin-left: 185px;
-}
-
-.flex {
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
 .sidenav-list__item {
     list-style: none;
     padding: 12px 0 0 0;
@@ -22,21 +9,13 @@
     font-size: 18px;
 }
 
-.project {
-    padding: 0 0 20px 0;
-}
-
 .card {
     border: 1px solid #F9F9FA;
-    width: 360px;
+    width: 100%;
 }
 
 .card>a {
     text-decoration: none;
-}
-
-.card-img {
-    width: 360px;
 }
 
 .card-title {
@@ -47,4 +26,10 @@
 .card-subtitle {
     font-size: 12px;
     color: #788DA0;
+    margin-top: 5px;
+}
+
+.card-img {
+    width: 100%;
+    margin-top: 5px;
 }
