diseño adaptativo del about

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -250,6 +250,9 @@ label {
         width: auto;
     }
     /*about*/
+    .img01 {
+        margin: 0;
+    }
     .img02 {
         display: none;
     }
