--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -5,8 +5,7 @@
 .textarea-group {
     border-radius: 3px;
     font-size: 16px;
-    padding: 10px 0 0 10px;
-    margin: 10px 0 10px 0;
+    margin: 10px 0;
     font-family: "Open Sans";
     width: 100%;
 }
@@ -34,11 +33,6 @@
     height: 1.25rem;
     opacity: 0;
     margin: 0 10px 0 0;
-}
-
-.formulario {
-    display: flex;
-    justify-content: space-between;
 }
 
 .formulario-image {
